🍱 converted favicon to PNG
…While retaining the SVG version too.
Also, compressed both it and the screenshot using Caesium with default settings, which are slightly lossy.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <title>🖼➡🖼🖼➡🖨 fit few copies of picture on printed page</title>
-    <link rel="icon" href="favicon.svg" />
     <link rel="manifest" href="manifest.webmanifest" />
+
+    <link rel="icon" href="./favicon.png" sizes="512x512" />
+    <link rel="icon" href="./favicon.svg" sizes="any" />
 
     <link href="index.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width" />
@@ -197,8 +200,8 @@
               Kai Magnus Müller
             </a>
             and
-            <a href="https://openmoji.org/">OpenMoji</a>&nbsp;&ndash; the open-source emoji
-            and icon project; license:
+            <a href="https://openmoji.org/">OpenMoji</a>&nbsp;&ndash; the open-source emoji and icon
+            project; license:
             <a href="https://creativecommons.org/licenses/by-sa/4.0/"> CC BY-SA 4.0 </a>
           </small>
         </li>
