🍱 added dark mode support to favicon

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </li>
         <li>
           <small>
-            the <a href="favicon.svg">favicon</a>, condensed and repeated, is adapted from
+            the <a href="./favicon.svg">favicon</a>, condensed, repeated and extended with dark mode support, is adapted from
             <a href="https://openmoji.org/library/emoji-E142/#variant=black">
               &ldquo;picture&rdquo;</a
             >
