💄 (href) prepended all sibling URIs with ./
…For consistency.

The full format is chosen over the basic bare one is because that latter can be a bit distracting – in many cases it's more widespread to use root URI instead (e.g. for favicon), making a sibling URI look like potential error for a moment.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
 
     <title>🖼➡🖼🖼➡🖨 fit few copies of picture on printed page</title>
-    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
 
     <link rel="icon" href="./favicon.png" sizes="512x512" />
     <link rel="icon" href="./favicon.svg" sizes="any" />
 
-    <link href="index.css" rel="stylesheet" />
+    <link href="./index.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width" />
 
     <script src="js/picture.js" defer></script>
