🚚 moved non-screenshot images to their own folder
Naming the new folder `assets` is chosen after:

- consulting with search results on StackExchange network
- gitmoji.dev's usage of this term
- Unity's usage of this term
- to a smaller degree, UE's usage of this word

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>🖼➡🖼🖼➡🖨 fit few copies of picture on printed page</title>
     <link rel="manifest" href="./manifest.webmanifest" />
 
-    <link rel="icon" href="./favicon.png" sizes="512x512" />
-    <link rel="icon" href="./favicon.svg" sizes="any" />
+    <link rel="icon" href="assets/favicon.png" sizes="512x512" />
+    <link rel="icon" href="assets/favicon.svg" sizes="any" />
 
     <link href="./index.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width" />
@@ -180,7 +180,7 @@
       >
         <template>
           <picture>
-            <img alt="a copy of the figure/illustration to print" src="picture.svg" />
+            <img alt="a copy of the figure/illustration to print" src="assets/picture.svg" />
           </picture>
         </template>
       </output>
@@ -207,7 +207,7 @@
         </li>
         <li>
           <small>
-            the <a href="./favicon.svg">favicon</a>, condensed, repeated and extended with dark mode support, is adapted from
+            the <a href="assets/favicon.svg">favicon</a>, condensed, repeated and extended with dark mode support, is adapted from
             <a href="https://openmoji.org/library/emoji-E142/#variant=black">
               &ldquo;picture&rdquo;</a
             >
